cleaning of fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Tennis_tracker</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_local_results">local_results</string>
+    <string name="title_activity_remote_results">remote_results</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
